--- a/src/components/AdminSidebar.css
+++ b/src/components/AdminSidebar.css
@@ -55,7 +55,7 @@
 }
 
 .Admin-Profile{
-    margin-left: 87%;
+    margin-left: 3%;
     margin-top: 1.3%;
     border-radius: 24px;
     padding: 10px 20px;
@@ -70,6 +70,18 @@
     text-decoration: none;
     /*position: fixed;*/
     color: black;
+}
+
+.logoutAdmin{
+    margin-top: 30px;
+    margin-left: 79%;
+    color: silver;
+    transition: .4s;
+    cursor: pointer;
+}
+
+.logoutAdmin:hover{
+    color: rgb(44,44,44);
 }
 
 .Navbar-admin span{
